<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.Activities.MainActivity">

    <HorizontalScrollView
        app:layout_constraintTop_toTopOf="parent"
        android:scrollbarAlwaysDrawHorizontalTrack="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:id="@+id/scroll_view">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_question_1"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/gray"
                android:fontFamily="@font/wellfleet"
                android:text="@string/one"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:cornerRadius="4dp"
                android:layout_marginEnd="10dp"/>

            <Button
                android:id="@+id/button_question_2"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/gray"
                android:fontFamily="@font/wellfleet"
                android:text="@string/two"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:cornerRadius="4dp"
                android:layout_marginEnd="10dp"/>

            <Button
                android:id="@+id/button_question_3"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/gray"
                android:fontFamily="@font/wellfleet"
                android:text="@string/three"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:cornerRadius="4dp"
                android:layout_marginEnd="10dp"/>


            <Button
                android:id="@+id/button_question_4"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/gray"
                android:fontFamily="@font/wellfleet"
                android:text="@string/four"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:cornerRadius="4dp"
                android:layout_marginEnd="10dp"/>

            <Button
                android:id="@+id/button_question_5"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/gray"
                android:fontFamily="@font/wellfleet"
                android:text="@string/five"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:cornerRadius="4dp"
                android:layout_marginEnd="10dp"/>

            <Button
                android:id="@+id/button_question_6"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/gray"
                android:fontFamily="@font/wellfleet"
                android:text="@string/six"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:cornerRadius="4dp"
                android:layout_marginEnd="10dp"/>

            <Button
                android:id="@+id/button_question_7"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/gray"
                android:fontFamily="@font/wellfleet"
                android:text="@string/seven"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:cornerRadius="4dp"
                android:layout_marginEnd="10dp"/>

            <Button
                android:id="@+id/button_question_8"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/gray"
                android:fontFamily="@font/wellfleet"
                android:text="@string/eight"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:cornerRadius="4dp"
                android:layout_marginEnd="10dp"/>

            <Button
                android:id="@+id/button_question_9"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/gray"
                android:fontFamily="@font/wellfleet"
                android:text="@string/nine"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:cornerRadius="4dp"
                android:layout_marginEnd="10dp"
                />

            <Button
                android:id="@+id/button_question_10"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/gray"
                android:text="@string/ten"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:cornerRadius="4dp"
                android:layout_marginEnd="10dp"/>

        </LinearLayout>

    </HorizontalScrollView>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragment_container"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:defaultNavHost="true"
        android:layout_marginTop="65dp"
        android:layout_marginBottom="50dp"
        app:layout_constraintTop_toBottomOf="@id/scroll_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
         />

    <Button
        android:id="@+id/button_send"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:backgroundTint="@color/button_color"
        android:fontFamily="@font/wellfleet"
        android:text="@string/next_task"
        android:textColor="@color/white"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textSize="20sp"
        app:cornerRadius="4dp"


        />


</androidx.constraintlayout.widget.ConstraintLayout>