<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/img_start">

    <Button
        android:id="@+id/buttonStart"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="420dp"
        android:backgroundTint="@color/button_color"
        android:textSize="20sp"
        android:text="@string/start"
        android:fontFamily="@font/wellfleet"
        android:padding="10dp"
        app:cornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/buttonHelp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="10dp"
        />

    <Button
        android:id="@+id/buttonHelp"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/button_color"
        android:textSize="20sp"
        android:text="@string/help"
        android:fontFamily="@font/wellfleet"
        app:cornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/card_view"
        android:layout_marginBottom="10dp"
        />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/gray"
        android:textSize="17sp"
        android:text="@string/add"
        app:cardCornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="10dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <EditText
            android:id="@+id/user_name"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:hint="@string/enter_user_name"
            android:fontFamily="@font/wellfleet"
            android:textCursorDrawable="@drawable/cursor_edit_text"
            android:backgroundTint="@color/button_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="User"
            android:inputType="textPersonName"/>

            <EditText
                android:id="@+id/password"
                android:hint="@string/enter_password"
                app:backgroundTint="@color/button_color"
                android:textCursorDrawable="@drawable/cursor_edit_text"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/wellfleet"
                android:layout_marginEnd="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="Password"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/buttonAdd"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:backgroundTint="@color/button_color"
                android:textSize="20sp"
                app:cornerRadius="8dp"
                android:fontFamily="@font/wellfleet"
                android:text="@string/add"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/buttonStart"
                />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>