<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/enter_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toTopOf="@id/rg_choose"
        android:fontFamily="@font/wellfleet"
        android:paddingStart="20dp"
        android:paddingEnd="0dp"
        android:text="Choose question type:"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        tools:ignore="HardcodedText" />

    <RadioGroup
        android:id="@+id/rg_choose"
        android:layout_marginStart="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/enter_type"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="0dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:id="@+id/radio_ch_1"
            android:layout_width="match_parent"
            android:textSize="20sp"
            android:text="@string/text_question"
            android:fontFamily="@font/wellfleet"
            android:layout_height="wrap_content"/>
        <RadioButton
            android:id="@+id/radio_ch_2"
            android:layout_width="match_parent"
            android:textSize="20sp"
            android:text="@string/test_question"
            android:fontFamily="@font/wellfleet"
            android:layout_height="wrap_content"/>
        <RadioButton
            android:id="@+id/radio_ch_3"
            android:layout_width="match_parent"
            android:textSize="20sp"
            android:text="@string/image_question"
            android:fontFamily="@font/wellfleet"
            android:layout_height="wrap_content"/>

    </RadioGroup>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragment_container_ch"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:defaultNavHost="true"
        app:layout_constraintTop_toBottomOf="@id/rg_choose"
        android:layout_marginTop="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>